# SkinSloved.ai

./: .gitignore  AGENTS.md  README.md  brain_of_the_doctor_groq.py  insforge.toml  pyproject.toml  voice_of_the_patient.py
backend/: .env.example  config.py  generate_kb.py  main.py  requirements.txt
backend/agents/: __init__.py  base_agent.py  diagnosis_agent.py  followup_agent.py  orchestrator.py  product_agent.py  treatment_agent.py  vision_agent.py
backend/data/: conditions_kb.json
backend/models/: consultation.py
backend/routers/: conditions.py  consultation.py  diary.py  followup.py
backend/services/: ai_service.py  db_service.py  product_service.py  report_service.py  storage_service.py  stt_service.py  tts_service.py
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/conditions/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/diary/: page.tsx
frontend/app/login/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/consult/: disease-chart.tsx  followup-questions.tsx  smart-camera.tsx
frontend/components/dashboard/: before-after.tsx  progress-chart.tsx
frontend/components/shared/: footer.tsx  navbar.tsx
frontend/lib/: auth-context.tsx  insforge.ts
migrations/: 20260714101630_create-users.sql  20260714101631_create-consultations.sql  20260714101632_create-storage-buckets.sql  20260715124112_fix-user-profile-column.sql
stitch_ai_skin_specialist_dashboard/: DESIGN.md
(+9 files in other folders)
